k8s/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pine-postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: pine
spec:
  serviceName: pine-postgres
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: pine
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: pine
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pine
          livenessProbe: &healthcheck
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
          readinessProbe:
            <<: *healthcheck
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 16Gi
        storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: pine-postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: pine
spec:
  clusterIP: None
  ports:
    - name: postgres
      port: 5432
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: pine
