k8s/redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pine-redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: pine
spec:
  serviceName: pine-redis
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/component: cache
      app.kubernetes.io/part-of: pine
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/component: cache
        app.kubernetes.io/part-of: pine
    spec:
      containers:
        - name: redis
          image: redis:6
          command: [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
            - name: redis-config
              mountPath: /usr/local/etc/redis
          livenessProbe: &healthcheck
            exec:
              command: [ "redis-cli", "ping" ]
          readinessProbe:
            <<: *healthcheck
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
      volumes:
        - name: redis-config
          configMap:
            name: pine-redis-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: pine-redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: pine
spec:
  clusterIP: None
  ports:
    - name: redis
      port: 6379
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: pine
