k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pine
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: pine
    app.kubernetes.io/part-of: pine
