k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pine-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/proxy-body-size: 16m
spec:
  tls:
    - hosts:
        - pine.uncomplicated.systems
      secretName: pine-tls
  rules:
    - host: pine.uncomplicated.systems
      http:
        paths:
          - backend:
              serviceName: pine
              servicePort: 80
